--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "gulptest",
   "version": "1.0.0",
   "description": "Gulp Test Study",
-  "main": "index.js",
   "scripts": {
-    "test": ""
+    "dev": "gulp dev",
+    "build": "gulp build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LunchTime-github/GulpTest.git"
-  },
-  "author": "",
+  "repository": "git+https://github.com/LunchTime-github/GulpTest.git",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/LunchTime-github/GulpTest/issues"
+  "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/register": "^7.6.2",
+    "gulp": "^4.0.2"
   },
-  "homepage": "https://github.com/LunchTime-github/GulpTest#readme"
+  "main": "index.js",
+  "author": "LunchTime-github <hiyoon9@gmail.com>",
+  "dependencies": {
+    "delete": "^1.1.0",
+    "gulp-pug": "^4.0.1",
+    "gulp-webserver": "^0.9.1"
+  }
 }
