--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Gulp Test Study",
   "scripts": {
     "dev": "gulp dev",
-    "build": "gulp build"
+    "build": "gulp build",
+    "deploy": "gulp deploy"
   },
   "repository": "git+https://github.com/LunchTime-github/GulpTest.git",
   "license": "ISC",
@@ -14,11 +15,20 @@
     "@babel/register": "^7.6.2",
     "gulp": "^4.0.2"
   },
-  "main": "build/index.html",
   "author": "LunchTime-github <hiyoon9@gmail.com>",
   "dependencies": {
+    "babelify": "^10.0.0",
     "delete": "^1.1.0",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-bro": "^1.0.3",
+    "gulp-csso": "^3.0.1",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-gh-pages-with-updated-gift": "^0.5.4",
+    "gulp-image": "^5.1.0",
     "gulp-pug": "^4.0.1",
-    "gulp-webserver": "^0.9.1"
+    "gulp-sass": "^4.0.2",
+    "gulp-webserver": "^0.9.1",
+    "node-sass": "^4.12.0",
+    "uglifyify": "^5.0.2"
   }
 }
